# aria_middle

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pathologies.toml  pyproject.toml  pyrightconfig.json  run.sh
.github/workflows/: ci.yml
agents/: diagnosis_agent.py  rag_agent.py  report_agent.py  video_agent.py
api/: websocket.py
api/routes/: health.py  sessions.py
core/: config.py  events.py  graph.py  pathologies.py  state.py  thresholds.py
models/: diagnostic.py  metrics.py  report.py
scripts/: aria_index_corpus.py  blur_video.py  build_protocol_corpus.py  fetch_pubmed.py  test_llm_link.py  test_video_agent.py  visualize_pose.py
services/llm/: prompt_builder.py  vllm_client.py  vllm_client_mock.py
services/pdf/: pdf_service.py  report_template.html
services/pose/: frame_annotator.py  frame_extractor.py  mediapipe_service.py  metrics_calculator.py
services/rag/: chromadb_service.py
tests/: test_diagnosis_agent.py  test_graph.py  test_metrics_calculator.py  test_rag_agent.py  test_report_agent.py  test_video_agent.py
tests/fixtures/: test_llm_payload.json
