[project]
name = "aria-middle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "idna>=3.15",
    "jinja2>=3.1.6",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.3",
    "langgraph>=1.1.9",
    "loguru>=0.7.3",
    "mediapipe>=0.10.33",
    "numpy>=2.4.4",
    "openai>=2.32.0",
    "opencv-python>=4.13.0.92",
    "pydantic-settings>=2.14.0",
    "pydantic[email]>=2.13.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "scipy>=1.17.1",
    "sentence-transformers>=5.4.1",
    "uvicorn[standard]>=0.46.0",
    "weasyprint>=68.1",
    "websockets>=16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "api", "core", "models", "services"]

[tool.ruff]
exclude = ["scripts/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"


[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
